[package]
name = "cronal"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.26"
cron = "0.12.0"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "time", "sync", "signal", "rt"] }
